cmake_minimum_required(VERSION 3.17)
project(AOC2023)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

function(addExe name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addExe("day_1" day1/trebuchet.cpp)
addExe("day_2" day2/cube_conudrum.cpp)
addExe("day_3" day3/gear_ratios.cpp)
addExe("day_4" day4/scratchcards.cpp)
addExe("day_5" day5/fertilizer.cpp)
addExe("day_6" day6/wait_for_it.cpp)
addExe("day_7" day7/camel_cards.cpp)